<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context="com.liyyang.yunnote.ui.SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_blue_light"
            app:contentInsetStart="0dp"
            android:layout_gravity="center_vertical"
            app:popupTheme="@style/AppTheme.PopupOverlay" >


            <TextView
                android:textSize="16dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:text="@string/settingname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        style="@style/setting_layout">">

        <LinearLayout
            style="@style/top_layout">

            <TextView
                android:layout_margin="10dp"
                style="@style/usertext"
                android:text="@string/yunbijishezhi"/>
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <View style="@style/bg_line"/>

        <LinearLayout
            style="@style/mid_layout">

            <TextView
                android:layout_margin="10dp"
                android:text="@string/tiaozhengziti"
                style="@style/usertext"/>
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <View style="@style/bg_line"/>

        <LinearLayout
            style="@style/bottom_layout">

            <TextView
                android:layout_margin="10dp"
                android:text="@string/guanyuruanjian"
                style="@style/usertext"/>
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>


    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>